--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
-{
-  "name": "database",
-  "version": "1.0.0",
-  "description": "Project of Basi di Dati 2015",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.10.7",
-    "express-react-views": "^0.7.0",
-    "mysql": "^2.5.4",
-    "react": "^0.12.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jsparber/database.git"
-  },
-  "author": "Julian Sparber",
-  "license": "GPLv3",
-  "bugs": {
-    "url": "https://github.com/jsparber/database/issues"
-  },
-  "homepage": "https://github.com/jsparber/database"
-}
+	{
+		"name": "database",
+		"version": "1.0.0",
+		"description": "Project of Basi di Dati 2015",
+		"main": "app.js",
+		"dependencies": {
+			"body-parser": "~1.10.1",
+			"browserify": "^8.0.3",
+			"cookie-parser": "~1.3.3",
+			"debug": "~2.1.1",
+			"express": "~4.10.6",
+			"express-react-views": "^0.7.0",
+			"morgan": "~1.5.1",
+			"react": "^0.12.2",
+			"react-tools": "^0.12.2",
+			"reactify": "^0.17.1",
+			"serve-favicon": "~2.2.0"
+		},
+		"devDependencies": {},
+		"scripts": {
+			"test": "echo \"Error: no test specified\" && exit 1",
+			"start": "browserify -t reactify --standalone main views/main.js -o public/scripts/main.js; ./bin/www"
+		},
+		"repository": {
+			"type": "git",
+			"url": "https://github.com/jsparber/database.git"
+		},
+		"author": "Julian Sparber",
+		"license": "GPLv3",
+		"bugs": {
+			"url": "https://github.com/jsparber/database/issues"
+		},
+		"homepage": "https://github.com/jsparber/database"
+	}
