--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.10.6",
     "express-react-views": "^0.7.0",
     "morgan": "~1.5.1",
+    "mysql": "^2.6.2",
     "react": "^0.12.2",
     "react-tools": "^0.12.2",
     "reactify": "^0.17.1",
